tests/var_infer_void_bad.stderr
tests/var_infer_void_bad.hop:5:10: error: HOP2027: cannot infer type from expression with no value
