tests/var_infer_void_bad.hop
// Verifies variable inference void is rejected.
fn noop() {}

fn example() {
	var x = noop()
	_ = x
}
